# deepintest

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
deepintest/: _conf.py  _typing.py  _utils.py  conftest.py
deepintest/io/: formatter.py  reader.py
deepintest/io/tests/: test_formatter.py  test_reader.py
deepintest/scripts/: solution.py
deepintest/scripts/tests/: test_solution.py
deepintest/scripts/tests/examples/: example4.txt  example5.txt  result1.txt  result2.txt  result4.txt
deepintest/search/: characters.py  cleaner.py  matcher.py
deepintest/search/tests/: test_characters.py  test_cleaner.py  test_matcher.py
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  io.rst  search.rst
docs/source/user/: index.rst
